force-app/main/default/objects/smagicinteract__Conversation_Related_Objects__c/smagicinteract__Conversation_Related_Objects__c.object-meta.xml
<CustomObject>
    <label>Conversation Related Objects</label>
    <nameField>
        <displayFormat>CRO-{000000}</displayFormat>
        <label>Conversation Related Objects Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversation Related Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>