force-app/main/default/objects/smagicinteract__Conversation_Related_Objects__c/fields/smagicinteract__Conversation_Field__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Conversation_Field__c</fullName>
    <description>This field contains the reference field of related object on Conversation.</description>
    <label>Conversation Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>