force-app/main/default/objects/smagicinteract__Conversation_Related_Objects__c/fields/smagicinteract__MOC__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__MOC__c</fullName>
    <description>This field contains the ID of the related MOC.</description>
    <label>MOC</label>
    <referenceTo>smagicinteract__Message_Object_Config__c</referenceTo>
    <relationshipLabel>Conversation Related Objects</relationshipLabel>
    <relationshipName>Conversation_Related_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>