force-app/main/default/objects/smagicinteract__Conversation_Related_Objects__c/fields/smagicinteract__Relative_Field__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Relative_Field__c</fullName>
    <description>This field contains the relative API path from Conversation to Related object.</description>
    <label>Relative Field</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>